# SegFiber

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  run.py  run.sh
seg_fiber/: __init__.py  seger.py
seg_fiber/model/: __init__.py  unet_tinygrad.py
src/: __init__.py  seger.py
