[project]
name = "seg_fiber"
version = "0.1"
description = "SegFiber"
authors = [
    { name="Rubin Zhao", email="beanli161514@gmail.com" },
    { name="Yang Liu", email="ryuuyou0529@163.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    'numpy',
    'tinygrad',
    'h5py',
    'zarr',
    'tifffile',
    'tqdm',
    'scipy',
    'scikit-image',
    'networkx',
    'rtree'
]

[tool.setuptools.packages.find]
include = ["seg_fiber", "seg_fiber.*"]

[options.extras_require]
pytorch = ["torch"]

[options.packages.find]
where = "seg_fiber"

# [tool.setuptools.package-data]
# "seg_fiber.model_pth" = ["*.pth"]
# "seg_fiber.model_st" = ["*.safetensors"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
